kuber/lesson8/src/exercise2/dpl-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-back-deployment
  labels:
    app: web-app-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app-back
  template:
    metadata:
      labels:
        app: web-app-back
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: cm-file-front-vol
          mountPath: /usr/share/nginx/html
      volumes:
      - name: cm-file-front-vol
        configMap:
          name: cm-file-front
