kuber/lesson8/src/exercise2/svc-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: web-app-back
spec:
  selector:
    app: web-app-back
  ports:
  - name: nginx-svc
    protocol: TCP
    port: 80
    targetPort: 80
